[191]: Refactor ContentIndexer & Test to eliminate powermock whitebox